<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_driver"
        android:id="@+id/create_driverBtn"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="OnClickViewDriver"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_driver_new"
        android:id="@+id/create_driverBtn_new"
        android:layout_gravity="center"
        android:layout_below="@+id/create_driverBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_driver"
        android:id="@+id/view_driverBtn"
        android:layout_below="@+id/create_driverBtn_new"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connectBtn"
        android:layout_below="@id/view_driverBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:id="@+id/disconnectBtn"
        android:layout_below="@+id/connectBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_maps"
        android:id="@+id/mapsBtn"
        android:layout_below="@+id/disconnectBtn"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/bluetooth"
        android:contentDescription="@string/logoBtn"
        android:layout_below="@+id/disconnectBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />
</RelativeLayout>
