<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="#FF99CC99"
    >
    <TextView
        android:layout_margin="10dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_driver_prename"
        android:text="@string/prename"
        android:gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_margin="10dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_driver_surname"
        android:text="@string/surname"
        android:gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_margin="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_driver_mobilenumber"
        android:text="@string/mobile_number"
        android:gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_margin="10dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_driver_email"
        android:text="@string/email_adress"
        android:gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_margin="10dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_driver_registration_number"
        android:text="@string/registration_number"
        android:gravity="center"
        android:textColor="#000000"
        />

 </LinearLayout>