<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mohammad.bluetoothconnect.NewDriverActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/prename"
        android:ems="10"
        android:id="@+id/prenameText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/surname"
        android:ems="10"
        android:id="@+id/surnameText"
        android:layout_below="@+id/prenameText"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailText"
        android:layout_gravity="center_horizontal"
        android:text="@string/email_adress"
        android:layout_below="@+id/surnameText"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/mobileText"
        android:text="@string/mobile_number"
        android:layout_below="@+id/emailText"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/registrationNumber"
        android:text="@string/registration_number"
        android:layout_below="@+id/mobileText"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_driver"
        android:id="@+id/save_contact"
        android:background="#FF99CC00"
        android:layout_gravity="center_horizontal"
        android:onClick="addContact"
        android:layout_marginTop="132dp"
        android:layout_below="@+id/registrationNumber"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
